# ripple

./: # TO-DO.rs  .gitignore  CMakeLists.txt  README.md  cd  compile.bat  main.c  ripple.h  ripple_widgets.h
.cache/clangd/index/: main.c.7A910BD112DA9BEB.idx  marrow.h.8B334C08617CD2B3.idx  ripple.h.EA06C90E4F2D7CB9.idx
backends/: ripple_empty.h  ripple_glfw.h  ripple_raylib.h  ripple_sdl.h  ripple_wgpu.h
examples/: CMakeLists.txt  build.bat  main.c
examples/raylib/: CMakeLists.txt  build.bat  compile.bat  main.c
examples/wgpu/: CMakeLists.txt  build.bat  compile.bat  main.c  shader.wgsl
examples/wgpu/glfw3webgpu/: glfw3webgpu.c
examples/wgpu/sdl2webgpu/: sdl2webgpu.c
examples/wgpu/webgpu/: CMakeLists.txt
include/marrow/: allocator.h  mapa.h  mapa2.h  marrow.h  vektor.h
include/printccy/: .gitignore  LICENSE  README.md  printccy.h
include/printccy/examples/: CMakeLists.txt  main.c
include/ripple/: ripple.h  ripple_widgets.h
include/ripple/backends/: ripple_empty.h  ripple_emscripten.h  ripple_glfw.h  ripple_sdl.h  ripple_wgpu.h
src/: ripple.h
